--- a/src/app/admin/features/channel_setting/Reports/trai-report/trai-report.component.html
+++ b/src/app/admin/features/channel_setting/Reports/trai-report/trai-report.component.html
@@ -181,10 +181,10 @@
                     <div><strong>Combo Package Update History</strong> </div>
                     <div class="tooltip">COMBO PACKAGE </div>
                 </div>
-                <div class="card royal-card tooltip-container" (click)="openPackageBaseDialogue('Reconsolation')"><i
+                <div class="card royal-card tooltip-container" (click)="openPackageBaseDialogue('Reconcilation')"><i
                         class="fas fa-window-close"></i>
-                    <div><strong>Reconsolation</strong> </div>
-                    <div class="tooltip">RECONSOLATION </div>
+                    <div><strong>Reconcilation</strong> </div>
+                    <div class="tooltip">RECONCILATION </div>
                 </div>
             </div>
         </mat-expansion-panel>
