--- a/src/app/admin/features/channel_setting/Reports_page/Trai/package-based/package-based.component.html
+++ b/src/app/admin/features/channel_setting/Reports_page/Trai/package-based/package-based.component.html
@@ -171,12 +171,12 @@
     </div>
 </div>
 
-<div *ngIf="type == 'Synchronization' || type == 'Reconsolation'">
+<div *ngIf="type == 'Synchronization' || type == 'Reconcilation'">
     <div *ngIf="type == 'Synchronization'" class="Head d-flex justify-content-between align-items-center mb-3">
         <span class="span">Synchronization REPORT</span>
         <i class="fa fa-close close-icon" (click)="onNoClick()"></i>
     </div>
-    <div *ngIf="type == 'Reconsolation'" class="Head d-flex justify-content-between align-items-center mb-3">
+    <div *ngIf="type == 'Reconcilation'" class="Head d-flex justify-content-between align-items-center mb-3">
         <span class="span">RECONSOLATION REPORT</span>
         <i class="fa fa-close close-icon" (click)="onNoClick()"></i>
     </div>
@@ -217,7 +217,7 @@
                            </div> -->
                         </div>
                     </div>
-                    <div *ngIf="type == 'Reconsolation' " class=" display mb-3">
+                    <div *ngIf="type == 'Reconcilation' " class=" display mb-3">
                         <div class="col-12 col-md-6 sidename">
                             <span style="color: #243359;" for="">Select Date</span>
                         </div>
@@ -236,7 +236,7 @@
                            </div> -->
                         </div>
                     </div>
-                    <div *ngIf="type !== 'Reconsolation'" class="input_box display mb-3">
+                    <div *ngIf="type !== 'Reconcilation'" class="input_box display mb-3">
                         <div class="col-12 col-md-6 sidename">
                             <span for="">Select Product</span>
                         </div>
@@ -257,7 +257,7 @@
                                 <img src="/assets/images/icons/Excel.png" alt="Excel Icon" width="40px">
                                 <div class="tooltip">Excel</div>
                             </div>
-                            <div *ngIf="type == 'Reconsolation'" class="export-icon col-6 col-md-3 mx-2"
+                            <div *ngIf="type == 'Reconcilation'" class="export-icon col-6 col-md-3 mx-2"
                                 (click)="getReconsolationData()">
                                 <img src="/assets/images/icons/Excel.png" alt="Excel Icon" width="40px">
                                 <div class="tooltip">Excel</div>
