--- a/src/app/admin/features/nav/nav.component.html
+++ b/src/app/admin/features/nav/nav.component.html
@@ -39,6 +39,7 @@
     <ul class="side-menu">
 
         <!-- ----------------------------------------------------------Admin & Reception role----------------------------------------- -->
+
         <li *ngIf="(isUser || isReception) && navigationList.dashboard"><a
                 (click)="navgetToUrl('/home');setActiveLinkTabList($event)" [class.hide]="!isSidebarOpen"
                 class="active nav-link">
@@ -226,7 +227,7 @@
                         (click)="navgetToUrl('/allocate_smartcard');setActiveLinkTab($event)"><i
                             class="fa fa-fw fa-gear icon ">&nbsp;</i>Allocated smartcard </a> </li>
 
-                <li *ngIf="navigationList.Smartcard_deallocation"><a
+                <li *ngIf="navigationList.smartcard_deallocation"><a
                         (click)="navgetToUrl('/smartcard_declaration');setActiveLinkTab($event)"><i
                             class="fa fa-fw fa-thumbs-down icon">&nbsp;</i> Smartcard Deallocation</a></li>
 
@@ -259,7 +260,8 @@
                 <li *ngIf="navigationList.bulk_deactivation"><a
                         (click)="navgetToUrl('/deactivation');setActiveLinkTab($event)"><i
                             class="fa fa-fw fa-minus-square icon">&nbsp;</i> Deactivation</a></li>
-                <li><a (click)="navgetToUrl('/smartcard_refresh');setActiveLinkTab($event)"><i
+                <li *ngIf="navigationList.bulk_smartcard_refresh"><a
+                        (click)="navgetToUrl('/smartcard_refresh');setActiveLinkTab($event)"><i
                             class="fa fa-fw fa-solid fa-gears icon ">&nbsp;</i>Bulk Smartcard Refresh </a> </li>
                 <li *ngIf="navigationList.bulk_addon_activation"><a
                         (click)="navgetToUrl('/addon_activation');setActiveLinkTab($event)"><i
@@ -270,7 +272,8 @@
                 <li *ngIf="navigationList.bulk_package_updation"><a
                         (click)="navgetToUrl('/Bulk_Package_Updation');setActiveLinkTab($event)"><i
                             class="fa fa-fw fa-circle-o icon">&nbsp;</i>Bulk Package Updation</a></li>
-                <li><a (click)="navgetToUrl('/bulk_smartcard_creation');setActiveLinkTab($event)"><i
+                <li *ngIf="navigationList.bulk_operatro_creation"><a
+                        (click)="navgetToUrl('/bulk_smartcard_creation');setActiveLinkTab($event)"><i
                             class="fa fa-fw fa-solid fa-users icon ">&nbsp;</i>Bulk Operator Creation </a> </li>
                 <li *ngIf="navigationList.bulk_subscription_extend"><a
                         (click)="navgetToUrl('/Subscription_Extend');setActiveLinkTab($event)"><i
@@ -284,7 +287,8 @@
                 <li *ngIf="navigationList.bulk_recurring"><a
                         (click)="navgetToUrl('/Recurring');setActiveLinkTab($event)"><i
                             class="fa-regular fa-registered icon">&nbsp;</i>Recurring</a> </li>
-                <li><a (click)="navgetToUrl('/special_lcotransfer');setActiveLinkTab($event)">
+                <li *ngIf="navigationList.bulk_lco_transfer"><a
+                        (click)="navgetToUrl('/special_lcotransfer');setActiveLinkTab($event)">
                         <i class='fas fa-exchange-alt icon'></i> &nbsp;LCO Transfer</a></li>
             </ul>
         </li>
@@ -603,15 +607,15 @@
                 &nbsp;
                 &nbsp;
                 <div class="nav-content w-100 d-flex justify-content-between align-items-center">
-                    <!-- <div *ngIf="isSubscriber" class="version col-4 col-md-4">
+                    <!-- <div *ngIf="isUser" class="version col-4 col-md-4">
                         <span class="ver" style="color: var(--role-color);"> {{role}}
                             &nbsp;</span>
                     </div> -->
-                    <!-- <div *ngIf="isOperator || isSubLco || isSubscriber " class="version col-4 col-md-4 mobile_nav">
+                    <div *ngIf="isOperator || isSubLco || isSubscriber " class="version col-4 col-md-4 mobile_nav">
                         <span class="ver" style="color: var(--role-color);"> {{operatorname}} {{retailername}}
                             {{subscribername}}
                             &nbsp;</span>
-                    </div> -->
+                    </div>
                     <div *ngIf="!isSearch"
                         class="search-and-image col-7 col-md-7 col-sm-7 col-lg-7 d-flex justify-content-start align-items-center"
                         (clickOutside)="closeDropdown()">
