--- a/src/app/admin/features/operator_Login/lco-report/lco-report.component.html
+++ b/src/app/admin/features/operator_Login/lco-report/lco-report.component.html
@@ -14,6 +14,11 @@
                     <div><strong>SUBSCRIBER ONLINE RECHARGE REPORT</strong></div>
                     <div class="tooltip">Subscriber online recharge report</div>
                 </div>
+                <div  class="card royal-card tooltip-container"
+                    (click)="openMsoDialog('sublco_offline')"><i class="fas fa-clipboard-list"></i>
+                    <div><strong> Sublco Offline <br> Payment History</strong> </div>
+                    <div class="tooltip">Sublco Offline Payment</div>
+                </div>
                 <div class="card royal-card tooltip-container" (click)="openMsoDialog('recharge_history')">
                     <div><strong>SUBSCRIBER PACKAGE RECHARGE REPORT</strong></div>
                     <div class="tooltip">Subscriber package recharge report</div>
