--- a/src/app/admin/features/special_role/Bulk operaton/specialareachange/specialareachange.component.html
+++ b/src/app/admin/features/special_role/Bulk operaton/specialareachange/specialareachange.component.html
@@ -10,57 +10,78 @@
     <div *ngIf="selectedTab === 'areachange'" class="commission">
         <div class="col-12 col-md-12 box display justify-content-center align-items-center">
             <!-- Select LCO -->
-            <mat-form-field appearance="outline" class="w-25 mx-2">
+            <!-- <mat-form-field appearance="outline" class="w-25 mx-2">
                 <mat-label>Select LCO</mat-label>
                 <mat-select [(ngModel)]="lco" (selectionChange)="onTableData()" name="lco" required>
                     <mat-option value="">Select LCO</mat-option>
                     <mat-option *ngFor="let lco of lcoList" [value]="lco.value">{{ lco.name }}</mat-option>
                 </mat-select>
                 <mat-error *ngIf="!lco">LCO is required</mat-error>
+            </mat-form-field> -->
+
+            <mat-form-field appearance="outline" class="mx-2 mobileview">
+                <mat-label> Select LCO</mat-label>
+                <mat-select [(ngModel)]="lco" panelClass="custom-select-panel" (closed)="onTableData()">
+
+                    <mat-option class="option_input">
+                        <input matInput [(ngModel)]="selectoperator" (input)="filteredOperator()"
+                            (click)="filteredOperator(); $event.stopPropagation()" placeholder="Type to search..."
+                            class="search-input" />
+                    </mat-option>
+                    <mat-option>Select LCO</mat-option>
+                    <mat-option *ngFor="let lco of filteredOperatorList" [value]="lco.value">{{ lco.name }}</mat-option>
+                </mat-select>
+                <mat-error *ngIf="!lco">LCO is required</mat-error>
             </mat-form-field>
-
-
-
-            <!-- <mat-form-field class="example-full-width" appearance="outline">
-                <mat-label>Select LCO</mat-label>
-                <input
-                  type="text"
-                  placeholder="Select LCO"
-                  matInput
-                  [(ngModel)]="lco"
-                  [matAutocomplete]="auto"
-                  (input)="filterLcoList()"
-                />
-                <mat-autocomplete #auto="matAutocomplete" (optionSelected)="onLcoSelected($event.option.value)">
-                  <mat-option *ngFor="let lco of filteredLcoList" [value]="lco.name">
-                    {{ lco.name }}
-                  </mat-option>
-                </mat-autocomplete>
-              </mat-form-field> -->
-              
-
-
-              
 
 
             <!-- Select Area -->
-            <mat-form-field appearance="outline" class="mx-2" [disabled]="!isAnyRowSelected">
+
+            <!-- <mat-form-field appearance="outline" class="mx-2" [disabled]="!isAnyRowSelected">
                 <mat-label>Select Area</mat-label>
                 <mat-select [(ngModel)]="area" (ngModelChange)="onAreaStatusChange()" name="area" required>
                     <mat-option value="">Select Area</mat-option>
-                    <!-- <mat-option value="0">ALL Area</mat-option> -->
                     <mat-option *ngFor="let area of areaList" [value]="area.value">{{ area.name }}</mat-option>
                 </mat-select>
                 <mat-error *ngIf="!area">Area is required</mat-error>
-            </mat-form-field>
+            </mat-form-field> -->
 
-            <!-- Select Street -->
             <mat-form-field appearance="outline" class="mx-2" [disabled]="!isAnyRowSelected">
+                <mat-label>Select Area</mat-label>
+                <mat-select [(ngModel)]="area" (ngModelChange)="onAreaStatusChange()" name="area" required>
+
+                    <mat-option class="option_input">
+                        <input matInput [(ngModel)]="selectArea" (input)="filteredArea()"
+                            (click)="filteredArea(); $event.stopPropagation()" placeholder="Type to search..."
+                            class="search-input" />
+                    </mat-option>
+                    <mat-option>Select Area</mat-option>
+                    <mat-option *ngFor="let area of filteredAreaList" [value]="area.value">{{ area.name }}</mat-option>
+                </mat-select>
+                <mat-error *ngIf="!area">Area is required</mat-error>
+            </mat-form-field>
+            <!-- Select Street -->
+            <!-- <mat-form-field appearance="outline" class="mx-2" [disabled]="!isAnyRowSelected">
                 <mat-label>Select Street</mat-label>
                 <mat-select [(ngModel)]="street" name="street" required>
                     <mat-option value="">Select Street</mat-option>
-                    <!-- <mat-option value="0">ALL Street</mat-option> -->
                     <mat-option *ngFor="let street of streetList" [value]="street.value">{{ street.name }}</mat-option>
+                </mat-select>
+                <mat-error *ngIf="!street">Street is required</mat-error>
+            </mat-form-field> -->
+
+            <mat-form-field appearance="outline" class="mx-2" [disabled]="!isAnyRowSelected">
+                <mat-label>Select Street</mat-label>
+                <mat-select [(ngModel)]="street" name="street" required>
+
+                    <mat-option class="option_input">
+                        <input matInput [(ngModel)]="selectStreet" (input)="filteredStreet()"
+                            (click)="filteredStreet(); $event.stopPropagation()" placeholder="Type to search..."
+                            class="search-input" />
+                    </mat-option>
+                    <mat-option>Select Street</mat-option>
+                    <mat-option *ngFor="let street of filteredStreetList" [value]="street.value">{{
+                        street.name}}</mat-option>
                 </mat-select>
                 <mat-error *ngIf="!street">Street is required</mat-error>
             </mat-form-field>
@@ -97,8 +118,15 @@
             <mat-form-field appearance="outline" class="w-25 mx-2">
                 <mat-label>Select LCO</mat-label>
                 <mat-select [(ngModel)]="lco" (ngModelChange)="onSubscriberStatusLCOChange()" name="lco" required>
+                    <!-- <mat-option *ngFor="let lco of lcoList" [value]="lco.value">{{ lco.name }}</mat-option> -->
+
+                    <mat-option class="option_input">
+                        <input matInput [(ngModel)]="selectoperator" (input)="filteredOperator()"
+                            (click)="filteredOperator(); $event.stopPropagation()" placeholder="Type to search..."
+                            class="search-input" />
+                    </mat-option>
                     <mat-option value="">Select LCO</mat-option>
-                    <mat-option *ngFor="let lco of lcoList" [value]="lco.value">{{ lco.name }}</mat-option>
+                    <mat-option *ngFor="let lco of filteredOperatorList" [value]="lco.value">{{ lco.name }}</mat-option>
                 </mat-select>
                 <mat-error *ngIf="!lco">LCO is required</mat-error>
             </mat-form-field>
@@ -107,8 +135,16 @@
             <mat-form-field appearance="outline" class="mx-2">
                 <mat-label>Select Area</mat-label>
                 <mat-select [(ngModel)]="area" (ngModelChange)="onAreaStatusLCOChange()" name="area" required>
+
+                    <!-- <mat-option *ngFor="let area of areaList" [value]="area.value">{{ area.name }}</mat-option> -->
+                    <mat-option class="option_input">
+                        <input matInput [(ngModel)]="selectArea" (input)="filteredArea()"
+                            (click)="filteredArea(); $event.stopPropagation()" placeholder="Type to search..."
+                            class="search-input" />
+                    </mat-option>
                     <mat-option value="">Select Area</mat-option>
-                    <mat-option *ngFor="let area of areaList" [value]="area.value">{{ area.name }}</mat-option>
+                    <mat-option *ngFor="let area of filteredAreaList" [value]="area.value">{{ area.name }}</mat-option>
+
                 </mat-select>
                 <mat-error *ngIf="!area">Area is required</mat-error>
             </mat-form-field>
@@ -117,8 +153,16 @@
             <mat-form-field appearance="outline" class="mx-2">
                 <mat-label>Select Street</mat-label>
                 <mat-select [(ngModel)]="street" (ngModelChange)="onSubscriberStreetLCOChange()" name="street" required>
+
+                    <!-- <mat-option *ngFor="let street of streetList" [value]="street.value">{{ street.name }}</mat-option> -->
+                    <mat-option class="option_input">
+                        <input matInput [(ngModel)]="selectStreet" (input)="filteredStreet()"
+                            (click)="filteredStreet(); $event.stopPropagation()" placeholder="Type to search..."
+                            class="search-input" />
+                    </mat-option>
                     <mat-option value="">Select Street</mat-option>
-                    <mat-option *ngFor="let street of streetList" [value]="street.value">{{ street.name }}</mat-option>
+                    <mat-option *ngFor="let street of filteredStreetList" [value]="street.value">{{
+                        street.name}}</mat-option>
                 </mat-select>
                 <mat-error *ngIf="!street">Street is required</mat-error>
             </mat-form-field>
