--- a/src/app/admin/features/special_role/Dialogue/Bulk operation/specialeditbulkpackage/specialeditbulkpackage.component.html
+++ b/src/app/admin/features/special_role/Dialogue/Bulk operation/specialeditbulkpackage/specialeditbulkpackage.component.html
@@ -7,10 +7,20 @@
         <div class="col-12 col-md-12 box d-block justify-content-center align-items-center">
             <!-- Select LCO -->
             <mat-form-field appearance="outline" class="w-25 mx-2">
-                <mat-label>Select LCO</mat-label>
+                  <mat-label>Select LCO</mat-label>
                 <mat-select [(ngModel)]="lco" (ngModelChange)="onSubscriberStatusChange()" name="lco" required>
+                    <!-- <mat-select [(ngModel)]="lco" (ngModelChange)="onSubscriberStatusChange()" name="lco" required>
                     <mat-option value="">Select LCO</mat-option>
                     <mat-option *ngFor="let lco of lcoList" [value]="lco.value">{{ lco.name }}</mat-option>
+                </mat-select> -->
+
+                    <mat-option class="option_input">
+                        <input matInput [(ngModel)]="selectoperator" (input)="filteredOperator()"
+                            (click)="filteredOperator(); $event.stopPropagation()" placeholder="Type to search..."
+                            class="search-input" />
+                    </mat-option>
+                    <mat-option>Select LCO</mat-option>
+                    <mat-option *ngFor="let lco of filteredOperatorList" [value]="lco.value">{{ lco.name }}</mat-option>
                 </mat-select>
                 <mat-error *ngIf="!lco">LCO is required</mat-error>
             </mat-form-field>
@@ -19,8 +29,15 @@
             <mat-form-field appearance="outline" class="mx-2">
                 <mat-label>Select Area</mat-label>
                 <mat-select [(ngModel)]="area" (ngModelChange)="onAreaStatusChange()" name="area" required>
+
+                    <!-- <mat-option *ngFor="let area of areaList" [value]="area.value">{{ area.name }}</mat-option> -->
+                    <mat-option class="option_input">
+                        <input matInput [(ngModel)]="selectArea" (input)="filteredArea()"
+                            (click)="filteredArea(); $event.stopPropagation()" placeholder="Type to search..."
+                            class="search-input" />
+                    </mat-option>
                     <mat-option value="">Select Area</mat-option>
-                    <mat-option *ngFor="let area of areaList" [value]="area.value">{{ area.name }}</mat-option>
+                    <mat-option *ngFor="let area of filteredAreaList" [value]="area.value">{{ area.name }}</mat-option>
                 </mat-select>
                 <mat-error *ngIf="!area">Area is required</mat-error>
             </mat-form-field>
@@ -29,8 +46,15 @@
             <mat-form-field appearance="outline" class="mx-2">
                 <mat-label>Select Street</mat-label>
                 <mat-select [(ngModel)]="street" name="street" required>
+                    <!-- <mat-option *ngFor="let street of streetList" [value]="street.value">{{ street.name }}</mat-option> -->
+                    <mat-option class="option_input">
+                        <input matInput [(ngModel)]="selectStreet" (input)="filteredStreet()"
+                            (click)="filteredStreet(); $event.stopPropagation()" placeholder="Type to search..."
+                            class="search-input" />
+                    </mat-option>
                     <mat-option value="">Select Street</mat-option>
-                    <mat-option *ngFor="let street of streetList" [value]="street.value">{{ street.name }}</mat-option>
+                    <mat-option *ngFor="let street of filteredStreetList" [value]="street.value">{{
+                        street.name}}</mat-option>
                 </mat-select>
                 <mat-error *ngIf="!street">Street is required</mat-error>
             </mat-form-field>
@@ -49,7 +73,7 @@
             </div>
         </div>
 
-      
+
         <div class="mobile mb-3 d-flex justify-content-center align-items-center ">
             <button class="btn btn-outline-info mx-1" mat-raised-button color="primary" type="button"
                 (click)="updateLCO()">
@@ -70,8 +94,8 @@
                     <h5>SUBSCRIBER LIST <span style="color: rgb(11, 67, 170);font-size: 20px;font-weight: 600;">-
                             {{rowData?.length}}</span></h5>
                 </div>
-                <ag-grid-angular #agGrid id="myGrid" style="text-align: center;" class="gridtable"
-                    domLayout='normal' class="ag-theme-alpine table-class" rowAnimation [gridOptions]="gridOptions"
+                <ag-grid-angular #agGrid id="myGrid" style="text-align: center;" class="gridtable" domLayout='normal'
+                    class="ag-theme-alpine table-class" rowAnimation [gridOptions]="gridOptions"
                     [columnDefs]="columnDefs" [rowData]="rowData" [enableCellTextSelection]="true">
                 </ag-grid-angular>
             </div>
