--- a/src/app/admin/features/special_role/Dialogue/addednotadded/addednotadded.component.scss
+++ b/src/app/admin/features/special_role/Dialogue/addednotadded/addednotadded.component.scss
@@ -75,21 +75,6 @@ h1 {
 }
 
 
-
-
-
-.example-list {
-    width: 100%;
-    min-height: 100px;
-    // border: 1px solid #ccc;
-    background: #f9f9f9;
-    // display: flex;
-    // flex-direction: column;
-    padding: 10px;
-}
-
-
-
 .displaybtn {
     display: grid;
 }
@@ -106,13 +91,12 @@ h1 {
 // }
 
 .example-list {
-    width: 100%;
-    min-height: 100px;
     border: 1px solid #ccc;
-    background: #f9f9f9;
-    display: flex;
-    flex-direction: column;
-    padding: 10px;
+    min-height: 200px;
+    max-height: 300px;
+    // padding: 10px;
+    overflow-y: auto;
+    background-color: #f9f9f9;
 }
 
 .example-box {
@@ -124,7 +108,16 @@ h1 {
 }
 
 .example-box.selected {
-    background-color: #e861ec;
+  background-color: #e861ec;
+}
+
+
+.example-box:last-child {
+    border: none;
+}
+
+.example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
+    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
 .cdk-drag-preview {
@@ -143,13 +136,7 @@ h1 {
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
-// .example-box:last-child {
-//     border: none;
-// }
 
-// .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
-//     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-// }
 
 @media (max-width: 767.98px) {
     //     .d-flex {
