--- a/src/app/admin/features/subscriber/sub-dashboard/sub-dashboard.component.html
+++ b/src/app/admin/features/subscriber/sub-dashboard/sub-dashboard.component.html
@@ -612,7 +612,13 @@
                                         (click)="openDialog('BASE','')">
                                         BASE CHANGE
                                     </div> -->
-                                    <div *ngIf="role != 'ROLE_SUBLCO' && !base   || (role == 'ROLE_SUBLCO' && !base && subChangeBase && packageStatus== 'Expired')"
+                                    <!-- <div *ngIf="role != 'ROLE_SUBLCO' && !base   || (role == 'ROLE_SUBLCO' && !base && subChangeBase && packageStatus== 'Expired')"
+                                        class="tab mb-3 bttn" [class.active]="selectedTab === 'BASE'"
+                                        (click)="openDialog('BASE','')">
+                                        BASE CHANGE
+                                    </div> -->
+
+                                    <div *ngIf="role != 'ROLE_SUBLCO' && !base   || (role == 'ROLE_SUBLCO' && !base) || (role == 'ROLE_SUBSCRIBER' && subChangeBase  && packageStatus== 'Expired')"
                                         class="tab mb-3 bttn" [class.active]="selectedTab === 'BASE'"
                                         (click)="openDialog('BASE','')">
                                         BASE CHANGE
