--- a/src/app/admin/features/channel_setting/_Dialogue/Inventory/replace-inventory/replace-inventory.component.html
+++ b/src/app/admin/features/channel_setting/_Dialogue/Inventory/replace-inventory/replace-inventory.component.html
@@ -9,7 +9,7 @@
                 <label>Smartcard</label>
             </div>
             <div class="col-12 col-md-8">
-                <input type="text" [(ngModel)]="Smartcard_1"  maxlength="20" >
+                <input type="text" [(ngModel)]="Smartcard_1" readonly maxlength="20" >
             </div>
         </div>
         <!-- <div class="input_box col-12 col-md-12 display_1 mb-2">
@@ -19,7 +19,7 @@
             <div class="col-12 col-md-8">
                 <div class="gender-category">
                     <input type="text" [(ngModel)]="boxid">
-                </div>
+                </div>  
             </div>
         </div> -->
         <div class=" input_box col-12 col-md-12 display_1 mb-2">
